# cardy

./: .gitignore  CMakeLists.txt  README.md
bench/: urandom.cpp
cmake/modules/: Findzstd.cmake
src/: main.cxx  main.hpp  walker.cpp  walker.hpp
src/plotting/: evdensity.py  findBounds.cxx  plot.sh  plotting.cxx
src/potentials/: gk.hpp  potentials.cpp  potentials.hpp
src/utils/: logging.cpp  parquet_writer.cpp  read_urandom.cpp  utils.hpp
tests/: gk_integrals.cpp
